# debato

./: .gitignore  Cargo.toml  DB_handler.py  README.md  Rocket.toml  app.py  db_handler.py  script.sql
dblife/accounts/: forms.py  models.py  urls.py  views.py
dblife/accounts/migrations/: 0001_initial.py  0002_remove_user_updated_at.py
dblife/accounts/templates/: base.html  home.html  login.html  register.html
dblife/boards/: admin.py  forms.py  models.py  urls.py  views.py
dblife/boards/migrations/: 0001_initial.py  0002_board_tage.py  0003_rename_tage_board_tags.py  0004_comment.py  0005_remove_comment_writer.py  0006_comment_writer.py  0007_alter_comment_writer.py  0008_alter_comment_writer.py  0009_auto_20210529_2319.py
dblife/boards/templates/: board_detail.html  board_list.html  board_write.html
dblife/community/: settings.py  urls.py
dblife/tag/: admin.py
dblife/tag/migrations/: 0001_initial.py
dblife/tags/: models.py
src/: main.rs
static/: board.html.tera  index.html.tera  sign.html.tera
static/css/: board.css  common.css  index.css  login.css  sign.css  signin.css
templates/: base.html  index.html  main.html  signin.html
templates/board/: announcements.html  anon.html  stock.html  study.html
templates/sign/: login.html  register.html
templates/write/: write.html
